--- a/ui.css
+++ b/ui.css
@@ -28,23 +28,23 @@ h1 {
 
 .social-share a {
     margin: 5px;
-    height: 1%; 
+    height: 1%; /* Adjust the height as per your preference */
 }
 
-
+/* Add this CSS to style the plant name box specifically */
 .form-select {
     width: 100%;
     padding: 8px;
     border-radius: 8px;
     border: 2px solid #032d03;
-    appearance: none;
-    background: transparent; 
-    background-image: url("dropdown-arrow.svg"); 
+    appearance: none; /* Remove default appearance */
+    background: transparent; /* Make background transparent */
+    background-image: url("dropdown-arrow.svg"); /* Add custom dropdown arrow icon */
     background-repeat: no-repeat;
     background-position: right center;
-    background-color: #ffffff; 
+    background-color: #ffffff; /* Set background color to white */
     background-size: 20px;
-    padding-right: 30px;
+    padding-right: 30px; /* Add space for the arrow icon */
 }
 
 /* Style the options within the dropdown */
@@ -195,8 +195,9 @@ h1 {
     background-image: linear-gradient(to bottom right , #27a627, #0f760f, #03340c), url('flowers.jpeg');
 }
 
+
 .sun {
-    position: fixed;
+    position: absolute;
     top: 20px;
     right: 30px;
     width: 80px;
@@ -204,8 +205,5 @@ h1 {
     background-color: #f3d633; /* Dark Yellow */
     border-radius: 50%;
 }
-
-
-
 
 
